showShots2.out
nohup: ignoring input
/home/hasselgren/simulatability-quantum-algorithms-time-evolution/venv/lib/python3.12/site-packages/cotengra/hyperoptimizers/hyper.py:39: UserWarning: Couldn't import `kahypar` - skipping from default hyper optimizer and using basic `labels` method instead.
  warnings.warn(
N:1000, dT:1.0, T:10.0, q:20, n_snap:10, v:pi_over_256, Δ:0.01227184630308513
The number of qubit:20
Number of terms in the Hamiltonian:80
Starting run 1 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 2 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 3 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 4 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 5 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 6 with signs: [1, 1, 1, 1, -1, 1, 1, 1, 1, 1]
Starting run 7 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 8 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 9 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 10 with signs: [1, 1, -1, 1, 1, 1, 1, 1, 1, 1]
Starting run 11 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 12 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 13 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 14 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 15 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, -1]
Starting run 16 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 17 with signs: [1, -1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 18 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 19 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 20 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 21 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 22 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 23 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 24 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 25 with signs: [1, 1, 1, -1, 1, 1, 1, 1, 1, 1]
Starting run 26 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 27 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 28 with signs: [1, 1, -1, 1, 1, 1, 1, 1, 1, 1]
Starting run 29 with signs: [1, 1, 1, 1, 1, 1, -1, 1, 1, 1]
Starting run 30 with signs: [1, 1, 1, 1, 1, 1, 1, 1, -1, 1]
Starting run 31 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 32 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 33 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 34 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 35 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 36 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 37 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 38 with signs: [1, 1, -1, 1, 1, 1, 1, 1, 1, 1]
Starting run 39 with signs: [1, 1, 1, 1, 1, 1, -1, 1, 1, 1]
Starting run 40 with signs: [1, 1, 1, 1, 1, 1, 1, -1, 1, 1]
Starting run 41 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 42 with signs: [1, 1, 1, 1, 1, -1, 1, 1, 1, 1]
Starting run 43 with signs: [1, -1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 44 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 45 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 46 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 47 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 48 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 49 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 50 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 51 with signs: [1, 1, 1, 1, 1, 1, 1, -1, 1, 1]
Starting run 52 with signs: [-1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 53 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 54 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 55 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 56 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 57 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 58 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 59 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, -1]
Starting run 60 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, -1]
Starting run 61 with signs: [1, 1, 1, 1, 1, 1, 1, -1, 1, 1]
Starting run 62 with signs: [-1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 63 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 64 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 65 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 66 with signs: [1, 1, 1, 1, -1, 1, 1, 1, 1, 1]
Starting run 67 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 68 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 69 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 70 with signs: [1, 1, 1, 1, 1, 1, 1, -1, 1, 1]
Starting run 71 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 72 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 73 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 74 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 75 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 76 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 77 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 78 with signs: [1, 1, 1, 1, -1, 1, 1, 1, 1, 1]
Starting run 79 with signs: [1, 1, 1, 1, 1, 1, 1, -1, 1, 1]
Starting run 80 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 81 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 82 with signs: [1, 1, 1, 1, 1, 1, 1, 1, -1, 1]
Starting run 83 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 84 with signs: [1, 1, 1, 1, -1, 1, 1, 1, 1, 1]
Starting run 85 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 86 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 87 with signs: [1, 1, 1, 1, 1, -1, 1, 1, 1, 1]
Starting run 88 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 89 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 90 with signs: [1, 1, 1, 1, 1, -1, 1, 1, 1, 1]
Starting run 91 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 92 with signs: [1, 1, 1, 1, 1, 1, -1, 1, 1, 1]
Starting run 93 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, -1]
Starting run 94 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 95 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 96 with signs: [1, 1, 1, -1, 1, 1, 1, 1, 1, 1]
Starting run 97 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 98 with signs: [1, -1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 99 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
Starting run 100 with signs: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
[Setup] Launching 100 runs across up to 127 worker processes (timesteps/run=10, dT=1.0).

[Error] A worker raised an exception: A process in the process pool was terminated abruptly while the future was running or pending.
Traceback (most recent call last):
  File "/home/hasselgren/simulatability-quantum-algorithms-time-evolution/TE-PAI-noSampling/showShots.py", line 609, in <module>
    compute_and_save_parallel(
  File "/home/hasselgren/simulatability-quantum-algorithms-time-evolution/TE-PAI-noSampling/showShots.py", line 376, in compute_and_save_parallel
    run_indices, signs, weights, results_run, tuples_contrib = fut.result()
                                                               ^^^^^^^^^^^^
  File "/usr/lib/python3.12/concurrent/futures/_base.py", line 449, in result
    return self.__get_result()
           ^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/concurrent/futures/_base.py", line 401, in __get_result
    raise self._exception
concurrent.futures.process.BrokenProcessPool: A process in the process pool was terminated abruptly while the future was running or pending.
